--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -42,16 +42,19 @@
         android:id="@+id/imageView3"
         android:layout_width="101dp"
         android:layout_height="88dp"
-        app:srcCompat="@drawable/accessible"
-        tools:layout_editor_absoluteX="294dp"
-        tools:layout_editor_absoluteY="12dp" />
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/accessible" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="88dp"
         android:layout_height="87dp"
-        app:srcCompat="@drawable/guidedogs_allowed"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="12dp" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/guidedogs_allowed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
