--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,6 +12,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,6 +24,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:text="TextView"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
@@ -39,7 +42,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/accessibleListImageView"
         android:layout_width="101dp"
         android:layout_height="88dp"
         android:layout_marginTop="16dp"
@@ -49,11 +52,11 @@
         app:srcCompat="@drawable/accessible" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/guideDogsAllowedListImageView"
         android:layout_width="88dp"
         android:layout_height="87dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/accessibleListImageView"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/guidedogs_allowed" />
 
