Can get details for restaurant on new view

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -33,6 +33,9 @@
         android:layout_width="238dp"
         android:layout_height="44dp"
         android:layout_marginTop="100dp"
+        android:clickable="false"
+        android:contextClickable="false"
+        android:isIndicator="true"
         android:max="5"
         android:min="0"
         android:numStars="5"
