--- a/app/src/main/res/layout/activity_add_new_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_new_restaurant.xml
@@ -132,7 +132,7 @@
 
     <RatingBar
         android:id="@+id/addNewRating"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
+        style="@style/Widget.AppCompat.RatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
