--- a/app/src/main/res/layout/activity_add_new_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_new_restaurant.xml
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/accessibleSwitch" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/addRestaurantImage"
         android:layout_width="126dp"
         android:layout_height="122dp"
         android:layout_marginTop="8dp"
