--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,39 +20,19 @@
         android:id="@+id/detailsNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/returnButton" />
-
-    <TextView
-        android:id="@+id/detailsAddressTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsNameTextView" />
-
-    <TextView
-        android:id="@+id/detailsPostalAddressTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsAddressTextView" />
 
     <TextView
         android:id="@+id/detailsTypeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,17 +45,49 @@
         style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:isIndicator="true"
+        android:progressTint="#FFEB3B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsTypeTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/detailsRestaurantImageView" />
+
+    <TextView
+        android:id="@+id/detailsAddressTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="292dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsNameTextView" />
+
+    <TextView
+        android:id="@+id/detailsPostalAddressTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsAddressTextView" />
+
+    <ImageView
+        android:id="@+id/detailsAccessibleImageView"
+        android:layout_width="130dp"
+        android:layout_height="127dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/ic_baseline_delete_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.807"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
 
     <ImageView
         android:id="@+id/detailsGuideDogImageView"
         android:layout_width="130dp"
         android:layout_height="127dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/ic_baseline_delete_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.249"
@@ -83,14 +95,13 @@
         app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
 
     <ImageView
-        android:id="@+id/detailsAccessibleImageView"
-        android:layout_width="130dp"
-        android:layout_height="127dp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/ic_baseline_delete_24"
+        android:id="@+id/detailsRestaurantImageView"
+        android:layout_width="263dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.807"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/detailsTypeTextView"
+        app:srcCompat="@drawable/ic_baseline_delete_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
