--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -56,33 +56,132 @@
         android:id="@+id/detailsGuideDogImageView"
         android:layout_width="82dp"
         android:layout_height="67dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="108dp"
         android:src="@drawable/ic_baseline_delete_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.349"
+        app:layout_constraintHorizontal_bias="0.334"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
 
     <ImageView
-        android:id="@+id/detailsAccessibleImageView"
-        android:layout_width="80dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="92dp"
-        android:src="@drawable/ic_baseline_delete_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.652"
+        android:id="@+id/phoneImageView"
+        android:layout_width="33dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:contentDescription="Phone icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/detailsGuideDogImageView"
+        app:srcCompat="@drawable/phone" />
+
+    <Button
+        android:id="@+id/btnShowOnMao"
+        android:layout_width="131dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp"
+        android:text="@string/showOnMap"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsPostalAddressTextView" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="33dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="Web icon"
+        app:layout_constraintEnd_toStartOf="@+id/webUrlTextView"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toEndOf="@+id/phoneNumberTextView"
+        app:layout_constraintTop_toBottomOf="@+id/detailsAccessibleImageView"
+        app:srcCompat="@drawable/web" />
+
+    <TextView
+        android:id="@+id/detailsPostalAddressTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="4dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsAddressTextView" />
+
+    <ImageView
+        android:id="@+id/addressImageView"
+        android:layout_width="33dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="4dp"
+        android:contentDescription="Address icon"
+        app:layout_constraintBottom_toTopOf="@+id/btnShowOnMao"
+        app:layout_constraintEnd_toStartOf="@+id/detailsAddressTextView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.428"
+        app:srcCompat="@drawable/address" />
+
+    <TextView
+        android:id="@+id/detailsAddressTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="512dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsNameTextView" />
+
+    <TextView
+        android:id="@+id/eMailTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/addressImageView"
+        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintStart_toEndOf="@+id/emailImageView"
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView" />
+
+    <TextView
+        android:id="@+id/webUrlTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="104dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsAccessibleImageView" />
 
     <TextView
         android:id="@+id/phoneNumberTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="468dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailsNameTextView" />
+
+    <ImageView
+        android:id="@+id/emailImageView"
+        android:layout_width="33dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:contentDescription="Email icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneImageView"
+        app:srcCompat="@drawable/email" />
+
+    <ImageView
+        android:id="@+id/detailsAccessibleImageView"
+        android:layout_width="80dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="108dp"
+        android:src="@drawable/ic_baseline_delete_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.637"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
 
     <ImageView
         android:id="@+id/detailsRestaurantImageView"
@@ -94,100 +193,25 @@
         app:layout_constraintTop_toBottomOf="@+id/detailsTypeTextView"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
 
-    <EditText
-        android:id="@+id/reviewMultilineEditTextView"
-        android:layout_width="334dp"
-        android:layout_height="59dp"
+    <Button
+        android:id="@+id/showMoreReviewsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
+        android:text="@string/moreReviews"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reviewTextView" />
+
+    <TextView
+        android:id="@+id/reviewTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar" />
-
-    <ImageView
-        android:id="@+id/phoneImageView"
-        android:layout_width="33dp"
-        android:layout_height="39dp"
-        app:srcCompat="@drawable/phone"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="565dp" />
-
-    <ImageView
-        android:id="@+id/addressImageView"
-        android:layout_width="33dp"
-        android:layout_height="39dp"
-        app:srcCompat="@drawable/address"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="619dp" />
-
-    <Button
-        android:id="@+id/btnShowOnMao"
-        android:layout_width="131dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="72dp"
-        android:text="@string/showOnMap"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="661dp" />
-
-    <TextView
-        android:id="@+id/detailsAddressTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="252dp"
-        android:layout_marginTop="516dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsNameTextView" />
-
-    <TextView
-        android:id="@+id/detailsPostalAddressTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="252dp"
-        android:layout_marginTop="4dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsAddressTextView" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="33dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/webUrlTextView"
-        app:layout_constraintHorizontal_bias="0.018"
-        app:layout_constraintStart_toEndOf="@+id/phoneNumberTextView"
-        app:layout_constraintTop_toBottomOf="@+id/detailsAccessibleImageView"
-        app:srcCompat="@drawable/web" />
-
-    <ImageView
-        android:id="@+id/emailImageView"
-        android:layout_width="33dp"
-        android:layout_height="39dp"
-        app:srcCompat="@drawable/email"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="619dp" />
-
-    <TextView
-        android:id="@+id/webUrlTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="575dp" />
-
-    <TextView
-        android:id="@+id/eMailTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="627dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
