all rating stars are now yellow

--- a/app/src/main/res/layout/activity_add_new_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_new_restaurant.xml
@@ -140,6 +140,7 @@
         android:max="5"
         android:min="0"
         android:numStars="5"
+        android:progressTint="#FFEB3B"
         android:stepSize="0.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
